@@ -125,18 +125,16 @@ sub render_content
 		$self->{search} = $session->param( $self->{prefix}."_searchstore" );
 	}
 
-	if( $session->internal_button_pressed )
+	my $ibutton = $session->param( $self->{prefix}."_action" );
+	$ibutton = "" unless defined $ibutton;
+
+	if( $ibutton eq "search" )
 	{
-		my $ibutton = $self->get_internal_button;
-	
-		if( $ibutton eq "clear" )
-		{
-			delete $self->{search};
-		}
-		if( $ibutton eq "search" )
-		{
-			$self->{search} = $session->param( $self->{prefix}."_searchtext" );
-		}
+		$self->{search} = $session->param( $self->{prefix}."_searchtext" );
+	}
+	if( $ibutton eq "clear" )
+	{
+		delete $self->{search};
 	}
 
 	if( $self->{search} eq "" )
@@ -448,8 +446,6 @@ sub get_state_params
 
 	my $params = "";
 	foreach my $id ( 
- 		"_internal_".$self->{prefix}."_search",
- 		"_internal_".$self->{prefix}."_clear",
  		$self->{prefix}."_searchstore",
 		$self->{prefix}."_searchtext",
 	)
@@ -458,6 +454,16 @@ sub get_state_params
 		next unless defined $v;
 		$params.= "&$id=$v";
 	}
+
+	if( defined $self->{session}->param( "_internal_".$self->{prefix}."_search" ) )
+	{
+		$params .= "&".$self->{prefix}."_action=search";
+	}
+	elsif( defined $self->{session}->param( "_internal_".$self->{prefix}."_clear" ) )
+	{
+		$params .= "&".$self->{prefix}."_action=clear";
+	}
+
 	return $params;	
 }
 
