@@ -8015,3 +8015,6 @@ EPRINTS-3.1-beta-2
  * Added maxlength of 16384 to Longtext field type (otherwise Import "cleans
     up" data to 255 chars)
 
+2008-12-17 tdb
+ * Can now use Subject input component with other fields in a workflow
+
